set(GODOT_SOURCE_CLASS_MODULE_DOCUMENTATION_SOURCE
        ${CMAKE_SOURCE_DIR}/modules/csg/doc_classes/CSGBox3D.xml
        ${CMAKE_SOURCE_DIR}/modules/csg/doc_classes/CSGCombiner3D.xml
        ${CMAKE_SOURCE_DIR}/modules/csg/doc_classes/CSGCylinder3D.xml
        ${CMAKE_SOURCE_DIR}/modules/csg/doc_classes/CSGMesh3D.xml
        ${CMAKE_SOURCE_DIR}/modules/csg/doc_classes/CSGPolygon3D.xml
        ${CMAKE_SOURCE_DIR}/modules/csg/doc_classes/CSGPrimitive3D.xml
        ${CMAKE_SOURCE_DIR}/modules/csg/doc_classes/CSGShape3D.xml
        ${CMAKE_SOURCE_DIR}/modules/csg/doc_classes/CSGSphere3D.xml
        ${CMAKE_SOURCE_DIR}/modules/csg/doc_classes/CSGTorus3D.xml
        ${CMAKE_SOURCE_DIR}/modules/enet/doc_classes/ENetConnection.xml
        ${CMAKE_SOURCE_DIR}/modules/enet/doc_classes/ENetMultiplayerPeer.xml
        ${CMAKE_SOURCE_DIR}/modules/enet/doc_classes/ENetPacketPeer.xml
        ${CMAKE_SOURCE_DIR}/modules/fbx/doc_classes/EditorSceneFormatImporterFBX2GLTF.xml
        ${CMAKE_SOURCE_DIR}/modules/fbx/doc_classes/EditorSceneFormatImporterUFBX.xml
        ${CMAKE_SOURCE_DIR}/modules/fbx/doc_classes/FBXDocument.xml
        ${CMAKE_SOURCE_DIR}/modules/fbx/doc_classes/FBXState.xml
        ${CMAKE_SOURCE_DIR}/modules/gdscript/doc_classes/@GDScript.xml
        ${CMAKE_SOURCE_DIR}/modules/gdscript/doc_classes/GDScript.xml
        ${CMAKE_SOURCE_DIR}/modules/gltf/doc_classes/EditorSceneFormatImporterBlend.xml
        ${CMAKE_SOURCE_DIR}/modules/gltf/doc_classes/EditorSceneFormatImporterGLTF.xml
        ${CMAKE_SOURCE_DIR}/modules/gltf/doc_classes/GLTFAccessor.xml
        ${CMAKE_SOURCE_DIR}/modules/gltf/doc_classes/GLTFAnimation.xml
        ${CMAKE_SOURCE_DIR}/modules/gltf/doc_classes/GLTFBufferView.xml
        ${CMAKE_SOURCE_DIR}/modules/gltf/doc_classes/GLTFCamera.xml
        ${CMAKE_SOURCE_DIR}/modules/gltf/doc_classes/GLTFDocument.xml
        ${CMAKE_SOURCE_DIR}/modules/gltf/doc_classes/GLTFDocumentExtension.xml
        ${CMAKE_SOURCE_DIR}/modules/gltf/doc_classes/GLTFDocumentExtensionConvertImporterMesh.xml
        ${CMAKE_SOURCE_DIR}/modules/gltf/doc_classes/GLTFLight.xml
        ${CMAKE_SOURCE_DIR}/modules/gltf/doc_classes/GLTFMesh.xml
        ${CMAKE_SOURCE_DIR}/modules/gltf/doc_classes/GLTFNode.xml
        ${CMAKE_SOURCE_DIR}/modules/gltf/doc_classes/GLTFPhysicsBody.xml
        ${CMAKE_SOURCE_DIR}/modules/gltf/doc_classes/GLTFPhysicsShape.xml
        ${CMAKE_SOURCE_DIR}/modules/gltf/doc_classes/GLTFSkeleton.xml
        ${CMAKE_SOURCE_DIR}/modules/gltf/doc_classes/GLTFSkin.xml
        ${CMAKE_SOURCE_DIR}/modules/gltf/doc_classes/GLTFSpecGloss.xml
        ${CMAKE_SOURCE_DIR}/modules/gltf/doc_classes/GLTFState.xml
        ${CMAKE_SOURCE_DIR}/modules/gltf/doc_classes/GLTFTexture.xml
        ${CMAKE_SOURCE_DIR}/modules/gltf/doc_classes/GLTFTextureSampler.xml
        ${CMAKE_SOURCE_DIR}/modules/gridmap/doc_classes/GridMap.xml
        ${CMAKE_SOURCE_DIR}/modules/minimp3/doc_classes/AudioStreamMP3.xml
        ${CMAKE_SOURCE_DIR}/modules/minimp3/doc_classes/ResourceImporterMP3.xml
        ${CMAKE_SOURCE_DIR}/modules/mobile_vr/doc_classes/MobileVRInterface.xml
        ${CMAKE_SOURCE_DIR}/modules/mono/doc_classes/CSharpScript.xml
        ${CMAKE_SOURCE_DIR}/modules/mono/doc_classes/GodotSharp.xml
        ${CMAKE_SOURCE_DIR}/modules/multiplayer/doc_classes/MultiplayerSpawner.xml
        ${CMAKE_SOURCE_DIR}/modules/multiplayer/doc_classes/MultiplayerSynchronizer.xml
        ${CMAKE_SOURCE_DIR}/modules/multiplayer/doc_classes/SceneMultiplayer.xml
        ${CMAKE_SOURCE_DIR}/modules/multiplayer/doc_classes/SceneReplicationConfig.xml
        ${CMAKE_SOURCE_DIR}/modules/noise/doc_classes/FastNoiseLite.xml
        ${CMAKE_SOURCE_DIR}/modules/noise/doc_classes/Noise.xml
        ${CMAKE_SOURCE_DIR}/modules/noise/doc_classes/NoiseTexture2D.xml
        ${CMAKE_SOURCE_DIR}/modules/noise/doc_classes/NoiseTexture3D.xml
        ${CMAKE_SOURCE_DIR}/modules/ogg/doc_classes/OggPacketSequence.xml
        ${CMAKE_SOURCE_DIR}/modules/ogg/doc_classes/OggPacketSequencePlayback.xml
        ${CMAKE_SOURCE_DIR}/modules/openxr/doc_classes/OpenXRAPIExtension.xml
        ${CMAKE_SOURCE_DIR}/modules/openxr/doc_classes/OpenXRAction.xml
        ${CMAKE_SOURCE_DIR}/modules/openxr/doc_classes/OpenXRActionMap.xml
        ${CMAKE_SOURCE_DIR}/modules/openxr/doc_classes/OpenXRActionSet.xml
        ${CMAKE_SOURCE_DIR}/modules/openxr/doc_classes/OpenXRExtensionWrapperExtension.xml
        ${CMAKE_SOURCE_DIR}/modules/openxr/doc_classes/OpenXRHand.xml
        ${CMAKE_SOURCE_DIR}/modules/openxr/doc_classes/OpenXRIPBinding.xml
        ${CMAKE_SOURCE_DIR}/modules/openxr/doc_classes/OpenXRInteractionProfile.xml
        ${CMAKE_SOURCE_DIR}/modules/openxr/doc_classes/OpenXRInteractionProfileMetadata.xml
        ${CMAKE_SOURCE_DIR}/modules/openxr/doc_classes/OpenXRInterface.xml
        ${CMAKE_SOURCE_DIR}/modules/regex/doc_classes/RegEx.xml
        ${CMAKE_SOURCE_DIR}/modules/regex/doc_classes/RegExMatch.xml
        ${CMAKE_SOURCE_DIR}/modules/text_server_adv/doc_classes/TextServerAdvanced.xml
        ${CMAKE_SOURCE_DIR}/modules/text_server_fb/doc_classes/TextServerFallback.xml
        ${CMAKE_SOURCE_DIR}/modules/theora/doc_classes/VideoStreamTheora.xml
        ${CMAKE_SOURCE_DIR}/modules/upnp/doc_classes/UPNP.xml
        ${CMAKE_SOURCE_DIR}/modules/upnp/doc_classes/UPNPDevice.xml
        ${CMAKE_SOURCE_DIR}/modules/vorbis/doc_classes/AudioStreamOggVorbis.xml
        ${CMAKE_SOURCE_DIR}/modules/vorbis/doc_classes/AudioStreamPlaybackOggVorbis.xml
        ${CMAKE_SOURCE_DIR}/modules/vorbis/doc_classes/ResourceImporterOggVorbis.xml
        ${CMAKE_SOURCE_DIR}/modules/webrtc/doc_classes/WebRTCDataChannel.xml
        ${CMAKE_SOURCE_DIR}/modules/webrtc/doc_classes/WebRTCDataChannelExtension.xml
        ${CMAKE_SOURCE_DIR}/modules/webrtc/doc_classes/WebRTCMultiplayerPeer.xml
        ${CMAKE_SOURCE_DIR}/modules/webrtc/doc_classes/WebRTCPeerConnection.xml
        ${CMAKE_SOURCE_DIR}/modules/webrtc/doc_classes/WebRTCPeerConnectionExtension.xml
        ${CMAKE_SOURCE_DIR}/modules/websocket/doc_classes/WebSocketMultiplayerPeer.xml
        ${CMAKE_SOURCE_DIR}/modules/websocket/doc_classes/WebSocketPeer.xml
        ${CMAKE_SOURCE_DIR}/modules/webxr/doc_classes/WebXRInterface.xml
        ${CMAKE_SOURCE_DIR}/modules/zip/doc_classes/ZIPPacker.xml
        ${CMAKE_SOURCE_DIR}/modules/zip/doc_classes/ZIPReader.xml
)

set(GODOT_SOURCE_PLATFORM_DOCUMENTATION_SOURCE
        ${CMAKE_SOURCE_DIR}/platform/android/doc_classes/EditorExportPlatformAndroid.xml
        ${CMAKE_SOURCE_DIR}/platform/ios/doc_classes/EditorExportPlatformIOS.xml
        ${CMAKE_SOURCE_DIR}/platform/linuxbsd/doc_classes/EditorExportPlatformLinuxBSD.xml
        ${CMAKE_SOURCE_DIR}/platform/macos/doc_classes/EditorExportPlatformMacOS.xml
        ${CMAKE_SOURCE_DIR}/platform/web/doc_classes/EditorExportPlatformWeb.xml
        ${CMAKE_SOURCE_DIR}/platform/windows/doc_classes/EditorExportPlatformWindows.xml
)
set(GODOT_SOURCE_CLASS_DOCUMENTATION_SOURCE, "")
# [[[cog
#   import cog
#   from cmake_builders import list_files
#   cog.outl('set_abs(GODOT_SOURCE_CLASS_DOCUMENTATION_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}')
#   for file in list_files(cog, 'classes', exts=['xml']):
#       cog.outl(f'        {file}')
#   cog.outl(')')
# ]]]
set_abs(GODOT_SOURCE_CLASS_DOCUMENTATION_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}
        classes/@GlobalScope.xml
        classes/AABB.xml
        classes/AESContext.xml
        classes/AStar2D.xml
        classes/AStar3D.xml
        classes/AStarGrid2D.xml
        classes/AcceptDialog.xml
        classes/AnimatableBody2D.xml
        classes/AnimatableBody3D.xml
        classes/AnimatedSprite2D.xml
        classes/AnimatedSprite3D.xml
        classes/AnimatedTexture.xml
        classes/Animation.xml
        classes/AnimationLibrary.xml
        classes/AnimationMixer.xml
        classes/AnimationNode.xml
        classes/AnimationNodeAdd2.xml
        classes/AnimationNodeAdd3.xml
        classes/AnimationNodeAnimation.xml
        classes/AnimationNodeBlend2.xml
        classes/AnimationNodeBlend3.xml
        classes/AnimationNodeBlendSpace1D.xml
        classes/AnimationNodeBlendSpace2D.xml
        classes/AnimationNodeBlendTree.xml
        classes/AnimationNodeOneShot.xml
        classes/AnimationNodeOutput.xml
        classes/AnimationNodeStateMachine.xml
        classes/AnimationNodeStateMachinePlayback.xml
        classes/AnimationNodeStateMachineTransition.xml
        classes/AnimationNodeSub2.xml
        classes/AnimationNodeSync.xml
        classes/AnimationNodeTimeScale.xml
        classes/AnimationNodeTimeSeek.xml
        classes/AnimationNodeTransition.xml
        classes/AnimationPlayer.xml
        classes/AnimationRootNode.xml
        classes/AnimationTree.xml
        classes/Area2D.xml
        classes/Area3D.xml
        classes/Array.xml
        classes/ArrayMesh.xml
        classes/ArrayOccluder3D.xml
        classes/AspectRatioContainer.xml
        classes/AtlasTexture.xml
        classes/AudioBusLayout.xml
        classes/AudioEffect.xml
        classes/AudioEffectAmplify.xml
        classes/AudioEffectBandLimitFilter.xml
        classes/AudioEffectBandPassFilter.xml
        classes/AudioEffectCapture.xml
        classes/AudioEffectChorus.xml
        classes/AudioEffectCompressor.xml
        classes/AudioEffectDelay.xml
        classes/AudioEffectDistortion.xml
        classes/AudioEffectEQ.xml
        classes/AudioEffectEQ10.xml
        classes/AudioEffectEQ21.xml
        classes/AudioEffectEQ6.xml
        classes/AudioEffectFilter.xml
        classes/AudioEffectHighPassFilter.xml
        classes/AudioEffectHighShelfFilter.xml
        classes/AudioEffectInstance.xml
        classes/AudioEffectLimiter.xml
        classes/AudioEffectLowPassFilter.xml
        classes/AudioEffectLowShelfFilter.xml
        classes/AudioEffectNotchFilter.xml
        classes/AudioEffectPanner.xml
        classes/AudioEffectPhaser.xml
        classes/AudioEffectPitchShift.xml
        classes/AudioEffectRecord.xml
        classes/AudioEffectReverb.xml
        classes/AudioEffectSpectrumAnalyzer.xml
        classes/AudioEffectSpectrumAnalyzerInstance.xml
        classes/AudioEffectStereoEnhance.xml
        classes/AudioListener2D.xml
        classes/AudioListener3D.xml
        classes/AudioServer.xml
        classes/AudioStream.xml
        classes/AudioStreamGenerator.xml
        classes/AudioStreamGeneratorPlayback.xml
        classes/AudioStreamMicrophone.xml
        classes/AudioStreamPlayback.xml
        classes/AudioStreamPlaybackPolyphonic.xml
        classes/AudioStreamPlaybackResampled.xml
        classes/AudioStreamPlayer.xml
        classes/AudioStreamPlayer2D.xml
        classes/AudioStreamPlayer3D.xml
        classes/AudioStreamPolyphonic.xml
        classes/AudioStreamRandomizer.xml
        classes/AudioStreamWAV.xml
        classes/BackBufferCopy.xml
        classes/BaseButton.xml
        classes/BaseMaterial3D.xml
        classes/Basis.xml
        classes/BitMap.xml
        classes/Bone2D.xml
        classes/BoneAttachment3D.xml
        classes/BoneMap.xml
        classes/BoxContainer.xml
        classes/BoxMesh.xml
        classes/BoxOccluder3D.xml
        classes/BoxShape3D.xml
        classes/Button.xml
        classes/ButtonGroup.xml
        classes/CPUParticles2D.xml
        classes/CPUParticles3D.xml
        classes/Callable.xml
        classes/CallbackTweener.xml
        classes/Camera2D.xml
        classes/Camera3D.xml
        classes/CameraAttributes.xml
        classes/CameraAttributesPhysical.xml
        classes/CameraAttributesPractical.xml
        classes/CameraFeed.xml
        classes/CameraServer.xml
        classes/CameraTexture.xml
        classes/CanvasGroup.xml
        classes/CanvasItem.xml
        classes/CanvasItemMaterial.xml
        classes/CanvasLayer.xml
        classes/CanvasModulate.xml
        classes/CanvasTexture.xml
        classes/CapsuleMesh.xml
        classes/CapsuleShape2D.xml
        classes/CapsuleShape3D.xml
        classes/CenterContainer.xml
        classes/CharFXTransform.xml
        classes/CharacterBody2D.xml
        classes/CharacterBody3D.xml
        classes/CheckBox.xml
        classes/CheckButton.xml
        classes/CircleShape2D.xml
        classes/ClassDB.xml
        classes/CodeEdit.xml
        classes/CodeHighlighter.xml
        classes/CollisionObject2D.xml
        classes/CollisionObject3D.xml
        classes/CollisionPolygon2D.xml
        classes/CollisionPolygon3D.xml
        classes/CollisionShape2D.xml
        classes/CollisionShape3D.xml
        classes/Color.xml
        classes/ColorPicker.xml
        classes/ColorPickerButton.xml
        classes/ColorRect.xml
        classes/Compositor.xml
        classes/CompositorEffect.xml
        classes/CompressedCubemap.xml
        classes/CompressedCubemapArray.xml
        classes/CompressedTexture2D.xml
        classes/CompressedTexture2DArray.xml
        classes/CompressedTexture3D.xml
        classes/CompressedTextureLayered.xml
        classes/ConcavePolygonShape2D.xml
        classes/ConcavePolygonShape3D.xml
        classes/ConeTwistJoint3D.xml
        classes/ConfigFile.xml
        classes/ConfirmationDialog.xml
        classes/Container.xml
        classes/Control.xml
        classes/ConvexPolygonShape2D.xml
        classes/ConvexPolygonShape3D.xml
        classes/Crypto.xml
        classes/CryptoKey.xml
        classes/Cubemap.xml
        classes/CubemapArray.xml
        classes/Curve.xml
        classes/Curve2D.xml
        classes/Curve3D.xml
        classes/CurveTexture.xml
        classes/CurveXYZTexture.xml
        classes/CylinderMesh.xml
        classes/CylinderShape3D.xml
        classes/DTLSServer.xml
        classes/DampedSpringJoint2D.xml
        classes/Decal.xml
        classes/Dictionary.xml
        classes/DirAccess.xml
        classes/DirectionalLight2D.xml
        classes/DirectionalLight3D.xml
        classes/DisplayServer.xml
        classes/EditorCommandPalette.xml
        classes/EditorDebuggerPlugin.xml
        classes/EditorDebuggerSession.xml
        classes/EditorExportPlatform.xml
        classes/EditorExportPlatformPC.xml
        classes/EditorExportPlugin.xml
        classes/EditorFeatureProfile.xml
        classes/EditorFileDialog.xml
        classes/EditorFileSystem.xml
        classes/EditorFileSystemDirectory.xml
        classes/EditorFileSystemImportFormatSupportQuery.xml
        classes/EditorImportPlugin.xml
        classes/EditorInspector.xml
        classes/EditorInspectorPlugin.xml
        classes/EditorInterface.xml
        classes/EditorNode3DGizmo.xml
        classes/EditorNode3DGizmoPlugin.xml
        classes/EditorPaths.xml
        classes/EditorPlugin.xml
        classes/EditorProperty.xml
        classes/EditorResourceConversionPlugin.xml
        classes/EditorResourcePicker.xml
        classes/EditorResourcePreview.xml
        classes/EditorResourcePreviewGenerator.xml
        classes/EditorResourceTooltipPlugin.xml
        classes/EditorSceneFormatImporter.xml
        classes/EditorScenePostImport.xml
        classes/EditorScenePostImportPlugin.xml
        classes/EditorScript.xml
        classes/EditorScriptPicker.xml
        classes/EditorSelection.xml
        classes/EditorSettings.xml
        classes/EditorSpinSlider.xml
        classes/EditorSyntaxHighlighter.xml
        classes/EditorTranslationParserPlugin.xml
        classes/EditorUndoRedoManager.xml
        classes/EditorVCSInterface.xml
        classes/EncodedObjectAsID.xml
        classes/Engine.xml
        classes/EngineDebugger.xml
        classes/EngineProfiler.xml
        classes/Environment.xml
        classes/Expression.xml
        classes/FileAccess.xml
        classes/FileDialog.xml
        classes/FileSystemDock.xml
        classes/FlowContainer.xml
        classes/FogMaterial.xml
        classes/FogVolume.xml
        classes/Font.xml
        classes/FontFile.xml
        classes/FontVariation.xml
        classes/FramebufferCacheRD.xml
        classes/GDExtension.xml
        classes/GDExtensionManager.xml
        classes/GPUParticles2D.xml
        classes/GPUParticles3D.xml
        classes/GPUParticlesAttractor3D.xml
        classes/GPUParticlesAttractorBox3D.xml
        classes/GPUParticlesAttractorSphere3D.xml
        classes/GPUParticlesAttractorVectorField3D.xml
        classes/GPUParticlesCollision3D.xml
        classes/GPUParticlesCollisionBox3D.xml
        classes/GPUParticlesCollisionHeightField3D.xml
        classes/GPUParticlesCollisionSDF3D.xml
        classes/GPUParticlesCollisionSphere3D.xml
        classes/Generic6DOFJoint3D.xml
        classes/Geometry2D.xml
        classes/Geometry3D.xml
        classes/GeometryInstance3D.xml
        classes/Gradient.xml
        classes/GradientTexture1D.xml
        classes/GradientTexture2D.xml
        classes/GraphEdit.xml
        classes/GraphElement.xml
        classes/GraphNode.xml
        classes/GridContainer.xml
        classes/GrooveJoint2D.xml
        classes/HBoxContainer.xml
        classes/HFlowContainer.xml
        classes/HMACContext.xml
        classes/HScrollBar.xml
        classes/HSeparator.xml
        classes/HSlider.xml
        classes/HSplitContainer.xml
        classes/HTTPClient.xml
        classes/HTTPRequest.xml
        classes/HashingContext.xml
        classes/HeightMapShape3D.xml
        classes/HingeJoint3D.xml
        classes/IP.xml
        classes/Image.xml
        classes/ImageFormatLoader.xml
        classes/ImageFormatLoaderExtension.xml
        classes/ImageTexture.xml
        classes/ImageTexture3D.xml
        classes/ImageTextureLayered.xml
        classes/ImmediateMesh.xml
        classes/ImporterMesh.xml
        classes/ImporterMeshInstance3D.xml
        classes/Input.xml
        classes/InputEvent.xml
        classes/InputEventAction.xml
        classes/InputEventFromWindow.xml
        classes/InputEventGesture.xml
        classes/InputEventJoypadButton.xml
        classes/InputEventJoypadMotion.xml
        classes/InputEventKey.xml
        classes/InputEventMIDI.xml
        classes/InputEventMagnifyGesture.xml
        classes/InputEventMouse.xml
        classes/InputEventMouseButton.xml
        classes/InputEventMouseMotion.xml
        classes/InputEventPanGesture.xml
        classes/InputEventScreenDrag.xml
        classes/InputEventScreenTouch.xml
        classes/InputEventShortcut.xml
        classes/InputEventWithModifiers.xml
        classes/InputMap.xml
        classes/InstancePlaceholder.xml
        classes/IntervalTweener.xml
        classes/ItemList.xml
        classes/JNISingleton.xml
        classes/JSON.xml
        classes/JSONRPC.xml
        classes/JavaClass.xml
        classes/JavaClassWrapper.xml
        classes/JavaScriptBridge.xml
        classes/JavaScriptObject.xml
        classes/Joint2D.xml
        classes/Joint3D.xml
        classes/KinematicCollision2D.xml
        classes/KinematicCollision3D.xml
        classes/Label.xml
        classes/Label3D.xml
        classes/LabelSettings.xml
        classes/Light2D.xml
        classes/Light3D.xml
        classes/LightOccluder2D.xml
        classes/LightmapGI.xml
        classes/LightmapGIData.xml
        classes/LightmapProbe.xml
        classes/Lightmapper.xml
        classes/LightmapperRD.xml
        classes/Line2D.xml
        classes/LineEdit.xml
        classes/LinkButton.xml
        classes/MainLoop.xml
        classes/MarginContainer.xml
        classes/Marker2D.xml
        classes/Marker3D.xml
        classes/Marshalls.xml
        classes/Material.xml
        classes/MenuBar.xml
        classes/MenuButton.xml
        classes/Mesh.xml
        classes/MeshConvexDecompositionSettings.xml
        classes/MeshDataTool.xml
        classes/MeshInstance2D.xml
        classes/MeshInstance3D.xml
        classes/MeshLibrary.xml
        classes/MeshTexture.xml
        classes/MethodTweener.xml
        classes/MissingNode.xml
        classes/MissingResource.xml
        classes/MovieWriter.xml
        classes/MultiMesh.xml
        classes/MultiMeshInstance2D.xml
        classes/MultiMeshInstance3D.xml
        classes/MultiplayerAPI.xml
        classes/MultiplayerAPIExtension.xml
        classes/MultiplayerPeer.xml
        classes/MultiplayerPeerExtension.xml
        classes/Mutex.xml
        classes/NavigationAgent2D.xml
        classes/NavigationAgent3D.xml
        classes/NavigationLink2D.xml
        classes/NavigationLink3D.xml
        classes/NavigationMesh.xml
        classes/NavigationMeshGenerator.xml
        classes/NavigationMeshSourceGeometryData2D.xml
        classes/NavigationMeshSourceGeometryData3D.xml
        classes/NavigationObstacle2D.xml
        classes/NavigationObstacle3D.xml
        classes/NavigationPathQueryParameters2D.xml
        classes/NavigationPathQueryParameters3D.xml
        classes/NavigationPathQueryResult2D.xml
        classes/NavigationPathQueryResult3D.xml
        classes/NavigationPolygon.xml
        classes/NavigationRegion2D.xml
        classes/NavigationRegion3D.xml
        classes/NavigationServer2D.xml
        classes/NavigationServer3D.xml
        classes/NinePatchRect.xml
        classes/Node.xml
        classes/Node2D.xml
        classes/Node3D.xml
        classes/Node3DGizmo.xml
        classes/NodePath.xml
        classes/ORMMaterial3D.xml
        classes/OS.xml
        classes/Object.xml
        classes/Occluder3D.xml
        classes/OccluderInstance3D.xml
        classes/OccluderPolygon2D.xml
        classes/OfflineMultiplayerPeer.xml
        classes/OmniLight3D.xml
        classes/OptimizedTranslation.xml
        classes/OptionButton.xml
        classes/PCKPacker.xml
        classes/PackedByteArray.xml
        classes/PackedColorArray.xml
        classes/PackedDataContainer.xml
        classes/PackedDataContainerRef.xml
        classes/PackedFloat32Array.xml
        classes/PackedFloat64Array.xml
        classes/PackedInt32Array.xml
        classes/PackedInt64Array.xml
        classes/PackedScene.xml
        classes/PackedStringArray.xml
        classes/PackedVector2Array.xml
        classes/PackedVector3Array.xml
        classes/PacketPeer.xml
        classes/PacketPeerDTLS.xml
        classes/PacketPeerExtension.xml
        classes/PacketPeerStream.xml
        classes/PacketPeerUDP.xml
        classes/Panel.xml
        classes/PanelContainer.xml
        classes/PanoramaSkyMaterial.xml
        classes/ParallaxBackground.xml
        classes/ParallaxLayer.xml
        classes/ParticleProcessMaterial.xml
        classes/Path2D.xml
        classes/Path3D.xml
        classes/PathFollow2D.xml
        classes/PathFollow3D.xml
        classes/Performance.xml
        classes/PhysicalBone2D.xml
        classes/PhysicalBone3D.xml
        classes/PhysicalSkyMaterial.xml
        classes/PhysicsBody2D.xml
        classes/PhysicsBody3D.xml
        classes/PhysicsDirectBodyState2D.xml
        classes/PhysicsDirectBodyState2DExtension.xml
        classes/PhysicsDirectBodyState3D.xml
        classes/PhysicsDirectBodyState3DExtension.xml
        classes/PhysicsDirectSpaceState2D.xml
        classes/PhysicsDirectSpaceState2DExtension.xml
        classes/PhysicsDirectSpaceState3D.xml
        classes/PhysicsDirectSpaceState3DExtension.xml
        classes/PhysicsMaterial.xml
        classes/PhysicsPointQueryParameters2D.xml
        classes/PhysicsPointQueryParameters3D.xml
        classes/PhysicsRayQueryParameters2D.xml
        classes/PhysicsRayQueryParameters3D.xml
        classes/PhysicsServer2D.xml
        classes/PhysicsServer2DExtension.xml
        classes/PhysicsServer2DManager.xml
        classes/PhysicsServer3D.xml
        classes/PhysicsServer3DExtension.xml
        classes/PhysicsServer3DManager.xml
        classes/PhysicsServer3DRenderingServerHandler.xml
        classes/PhysicsShapeQueryParameters2D.xml
        classes/PhysicsShapeQueryParameters3D.xml
        classes/PhysicsTestMotionParameters2D.xml
        classes/PhysicsTestMotionParameters3D.xml
        classes/PhysicsTestMotionResult2D.xml
        classes/PhysicsTestMotionResult3D.xml
        classes/PinJoint2D.xml
        classes/PinJoint3D.xml
        classes/PlaceholderCubemap.xml
        classes/PlaceholderCubemapArray.xml
        classes/PlaceholderMaterial.xml
        classes/PlaceholderMesh.xml
        classes/PlaceholderTexture2D.xml
        classes/PlaceholderTexture2DArray.xml
        classes/PlaceholderTexture3D.xml
        classes/PlaceholderTextureLayered.xml
        classes/Plane.xml
        classes/PlaneMesh.xml
        classes/PointLight2D.xml
        classes/PointMesh.xml
        classes/Polygon2D.xml
        classes/PolygonOccluder3D.xml
        classes/PolygonPathFinder.xml
        classes/Popup.xml
        classes/PopupMenu.xml
        classes/PopupPanel.xml
        classes/PortableCompressedTexture2D.xml
        classes/PrimitiveMesh.xml
        classes/PrismMesh.xml
        classes/ProceduralSkyMaterial.xml
        classes/ProgressBar.xml
        classes/ProjectSettings.xml
        classes/Projection.xml
        classes/PropertyTweener.xml
        classes/QuadMesh.xml
        classes/QuadOccluder3D.xml
        classes/Quaternion.xml
        classes/RDAttachmentFormat.xml
        classes/RDFramebufferPass.xml
        classes/RDPipelineColorBlendState.xml
        classes/RDPipelineColorBlendStateAttachment.xml
        classes/RDPipelineDepthStencilState.xml
        classes/RDPipelineMultisampleState.xml
        classes/RDPipelineRasterizationState.xml
        classes/RDPipelineSpecializationConstant.xml
        classes/RDSamplerState.xml
        classes/RDShaderFile.xml
        classes/RDShaderSPIRV.xml
        classes/RDShaderSource.xml
        classes/RDTextureFormat.xml
        classes/RDTextureView.xml
        classes/RDUniform.xml
        classes/RDVertexAttribute.xml
        classes/RID.xml
        classes/RandomNumberGenerator.xml
        classes/Range.xml
        classes/RayCast2D.xml
        classes/RayCast3D.xml
        classes/Rect2.xml
        classes/Rect2i.xml
        classes/RectangleShape2D.xml
        classes/RefCounted.xml
        classes/ReferenceRect.xml
        classes/ReflectionProbe.xml
        classes/RemoteTransform2D.xml
        classes/RemoteTransform3D.xml
        classes/RenderData.xml
        classes/RenderDataExtension.xml
        classes/RenderDataRD.xml
        classes/RenderSceneBuffers.xml
        classes/RenderSceneBuffersConfiguration.xml
        classes/RenderSceneBuffersExtension.xml
        classes/RenderSceneBuffersRD.xml
        classes/RenderSceneData.xml
        classes/RenderSceneDataExtension.xml
        classes/RenderSceneDataRD.xml
        classes/RenderingDevice.xml
        classes/RenderingServer.xml
        classes/Resource.xml
        classes/ResourceFormatLoader.xml
        classes/ResourceFormatSaver.xml
        classes/ResourceImporter.xml
        classes/ResourceImporterBMFont.xml
        classes/ResourceImporterBitMap.xml
        classes/ResourceImporterCSVTranslation.xml
        classes/ResourceImporterDynamicFont.xml
        classes/ResourceImporterImage.xml
        classes/ResourceImporterImageFont.xml
        classes/ResourceImporterLayeredTexture.xml
        classes/ResourceImporterOBJ.xml
        classes/ResourceImporterScene.xml
        classes/ResourceImporterShaderFile.xml
        classes/ResourceImporterTexture.xml
        classes/ResourceImporterTextureAtlas.xml
        classes/ResourceImporterWAV.xml
        classes/ResourceLoader.xml
        classes/ResourcePreloader.xml
        classes/ResourceSaver.xml
        classes/ResourceUID.xml
        classes/RibbonTrailMesh.xml
        classes/RichTextEffect.xml
        classes/RichTextLabel.xml
        classes/RigidBody2D.xml
        classes/RigidBody3D.xml
        classes/RootMotionView.xml
        classes/SceneState.xml
        classes/SceneTree.xml
        classes/SceneTreeTimer.xml
        classes/Script.xml
        classes/ScriptCreateDialog.xml
        classes/ScriptEditor.xml
        classes/ScriptEditorBase.xml
        classes/ScriptExtension.xml
        classes/ScriptLanguage.xml
        classes/ScriptLanguageExtension.xml
        classes/ScrollBar.xml
        classes/ScrollContainer.xml
        classes/SegmentShape2D.xml
        classes/Semaphore.xml
        classes/SeparationRayShape2D.xml
        classes/SeparationRayShape3D.xml
        classes/Separator.xml
        classes/Shader.xml
        classes/ShaderGlobalsOverride.xml
        classes/ShaderInclude.xml
        classes/ShaderMaterial.xml
        classes/Shape2D.xml
        classes/Shape3D.xml
        classes/ShapeCast2D.xml
        classes/ShapeCast3D.xml
        classes/Shortcut.xml
        classes/Signal.xml
        classes/Skeleton2D.xml
        classes/Skeleton3D.xml
        classes/SkeletonIK3D.xml
        classes/SkeletonModification2D.xml
        classes/SkeletonModification2DCCDIK.xml
        classes/SkeletonModification2DFABRIK.xml
        classes/SkeletonModification2DJiggle.xml
        classes/SkeletonModification2DLookAt.xml
        classes/SkeletonModification2DPhysicalBones.xml
        classes/SkeletonModification2DStackHolder.xml
        classes/SkeletonModification2DTwoBoneIK.xml
        classes/SkeletonModificationStack2D.xml
        classes/SkeletonProfile.xml
        classes/SkeletonProfileHumanoid.xml
        classes/Skin.xml
        classes/SkinReference.xml
        classes/Sky.xml
        classes/Slider.xml
        classes/SliderJoint3D.xml
        classes/SoftBody3D.xml
        classes/SphereMesh.xml
        classes/SphereOccluder3D.xml
        classes/SphereShape3D.xml
        classes/SpinBox.xml
        classes/SplitContainer.xml
        classes/SpotLight3D.xml
        classes/SpringArm3D.xml
        classes/Sprite2D.xml
        classes/Sprite3D.xml
        classes/SpriteBase3D.xml
        classes/SpriteFrames.xml
        classes/StandardMaterial3D.xml
        classes/StaticBody2D.xml
        classes/StaticBody3D.xml
        classes/StatusIndicator.xml
        classes/StreamPeer.xml
        classes/StreamPeerBuffer.xml
        classes/StreamPeerExtension.xml
        classes/StreamPeerGZIP.xml
        classes/StreamPeerTCP.xml
        classes/StreamPeerTLS.xml
        classes/String.xml
        classes/StringName.xml
        classes/StyleBox.xml
        classes/StyleBoxEmpty.xml
        classes/StyleBoxFlat.xml
        classes/StyleBoxLine.xml
        classes/StyleBoxTexture.xml
        classes/SubViewport.xml
        classes/SubViewportContainer.xml
        classes/SurfaceTool.xml
        classes/SyntaxHighlighter.xml
        classes/SystemFont.xml
        classes/TCPServer.xml
        classes/TLSOptions.xml
        classes/TabBar.xml
        classes/TabContainer.xml
        classes/TextEdit.xml
        classes/TextLine.xml
        classes/TextMesh.xml
        classes/TextParagraph.xml
        classes/TextServer.xml
        classes/TextServerDummy.xml
        classes/TextServerExtension.xml
        classes/TextServerManager.xml
        classes/Texture.xml
        classes/Texture2D.xml
        classes/Texture2DArray.xml
        classes/Texture2DArrayRD.xml
        classes/Texture2DRD.xml
        classes/Texture3D.xml
        classes/Texture3DRD.xml
        classes/TextureButton.xml
        classes/TextureCubemapArrayRD.xml
        classes/TextureCubemapRD.xml
        classes/TextureLayered.xml
        classes/TextureLayeredRD.xml
        classes/TextureProgressBar.xml
        classes/TextureRect.xml
        classes/Theme.xml
        classes/ThemeDB.xml
        classes/Thread.xml
        classes/TileData.xml
        classes/TileMap.xml
        classes/TileMapLayerGroup.xml
        classes/TileMapPattern.xml
        classes/TileSet.xml
        classes/TileSetAtlasSource.xml
        classes/TileSetScenesCollectionSource.xml
        classes/TileSetSource.xml
        classes/Time.xml
        classes/Timer.xml
        classes/TorusMesh.xml
        classes/TouchScreenButton.xml
        classes/Transform2D.xml
        classes/Transform3D.xml
        classes/Translation.xml
        classes/TranslationServer.xml
        classes/Tree.xml
        classes/TreeItem.xml
        classes/TriangleMesh.xml
        classes/TubeTrailMesh.xml
        classes/Tween.xml
        classes/Tweener.xml
        classes/UDPServer.xml
        classes/UndoRedo.xml
        classes/UniformSetCacheRD.xml
        classes/VBoxContainer.xml
        classes/VFlowContainer.xml
        classes/VScrollBar.xml
        classes/VSeparator.xml
        classes/VSlider.xml
        classes/VSplitContainer.xml
        classes/Variant.xml
        classes/Vector2.xml
        classes/Vector2i.xml
        classes/Vector3.xml
        classes/Vector3i.xml
        classes/Vector4.xml
        classes/Vector4i.xml
        classes/VehicleBody3D.xml
        classes/VehicleWheel3D.xml
        classes/VideoStream.xml
        classes/VideoStreamPlayback.xml
        classes/VideoStreamPlayer.xml
        classes/Viewport.xml
        classes/ViewportTexture.xml
        classes/VisibleOnScreenEnabler2D.xml
        classes/VisibleOnScreenEnabler3D.xml
        classes/VisibleOnScreenNotifier2D.xml
        classes/VisibleOnScreenNotifier3D.xml
        classes/VisualInstance3D.xml
        classes/VisualShader.xml
        classes/VisualShaderNode.xml
        classes/VisualShaderNodeBillboard.xml
        classes/VisualShaderNodeBooleanConstant.xml
        classes/VisualShaderNodeBooleanParameter.xml
        classes/VisualShaderNodeClamp.xml
        classes/VisualShaderNodeColorConstant.xml
        classes/VisualShaderNodeColorFunc.xml
        classes/VisualShaderNodeColorOp.xml
        classes/VisualShaderNodeColorParameter.xml
        classes/VisualShaderNodeComment.xml
        classes/VisualShaderNodeCompare.xml
        classes/VisualShaderNodeConstant.xml
        classes/VisualShaderNodeCubemap.xml
        classes/VisualShaderNodeCubemapParameter.xml
        classes/VisualShaderNodeCurveTexture.xml
        classes/VisualShaderNodeCurveXYZTexture.xml
        classes/VisualShaderNodeCustom.xml
        classes/VisualShaderNodeDerivativeFunc.xml
        classes/VisualShaderNodeDeterminant.xml
        classes/VisualShaderNodeDistanceFade.xml
        classes/VisualShaderNodeDotProduct.xml
        classes/VisualShaderNodeExpression.xml
        classes/VisualShaderNodeFaceForward.xml
        classes/VisualShaderNodeFloatConstant.xml
        classes/VisualShaderNodeFloatFunc.xml
        classes/VisualShaderNodeFloatOp.xml
        classes/VisualShaderNodeFloatParameter.xml
        classes/VisualShaderNodeFresnel.xml
        classes/VisualShaderNodeGlobalExpression.xml
        classes/VisualShaderNodeGroupBase.xml
        classes/VisualShaderNodeIf.xml
        classes/VisualShaderNodeInput.xml
        classes/VisualShaderNodeIntConstant.xml
        classes/VisualShaderNodeIntFunc.xml
        classes/VisualShaderNodeIntOp.xml
        classes/VisualShaderNodeIntParameter.xml
        classes/VisualShaderNodeIs.xml
        classes/VisualShaderNodeLinearSceneDepth.xml
        classes/VisualShaderNodeMix.xml
        classes/VisualShaderNodeMultiplyAdd.xml
        classes/VisualShaderNodeOuterProduct.xml
        classes/VisualShaderNodeOutput.xml
        classes/VisualShaderNodeParameter.xml
        classes/VisualShaderNodeParameterRef.xml
        classes/VisualShaderNodeParticleAccelerator.xml
        classes/VisualShaderNodeParticleBoxEmitter.xml
        classes/VisualShaderNodeParticleConeVelocity.xml
        classes/VisualShaderNodeParticleEmit.xml
        classes/VisualShaderNodeParticleEmitter.xml
        classes/VisualShaderNodeParticleMeshEmitter.xml
        classes/VisualShaderNodeParticleMultiplyByAxisAngle.xml
        classes/VisualShaderNodeParticleOutput.xml
        classes/VisualShaderNodeParticleRandomness.xml
        classes/VisualShaderNodeParticleRingEmitter.xml
        classes/VisualShaderNodeParticleSphereEmitter.xml
        classes/VisualShaderNodeProximityFade.xml
        classes/VisualShaderNodeRandomRange.xml
        classes/VisualShaderNodeRemap.xml
        classes/VisualShaderNodeResizableBase.xml
        classes/VisualShaderNodeRotationByAxis.xml
        classes/VisualShaderNodeSDFRaymarch.xml
        classes/VisualShaderNodeSDFToScreenUV.xml
        classes/VisualShaderNodeSample3D.xml
        classes/VisualShaderNodeScreenNormalWorldSpace.xml
        classes/VisualShaderNodeScreenUVToSDF.xml
        classes/VisualShaderNodeSmoothStep.xml
        classes/VisualShaderNodeStep.xml
        classes/VisualShaderNodeSwitch.xml
        classes/VisualShaderNodeTexture.xml
        classes/VisualShaderNodeTexture2DArray.xml
        classes/VisualShaderNodeTexture2DArrayParameter.xml
        classes/VisualShaderNodeTexture2DParameter.xml
        classes/VisualShaderNodeTexture3D.xml
        classes/VisualShaderNodeTexture3DParameter.xml
        classes/VisualShaderNodeTextureParameter.xml
        classes/VisualShaderNodeTextureParameterTriplanar.xml
        classes/VisualShaderNodeTextureSDF.xml
        classes/VisualShaderNodeTextureSDFNormal.xml
        classes/VisualShaderNodeTransformCompose.xml
        classes/VisualShaderNodeTransformConstant.xml
        classes/VisualShaderNodeTransformDecompose.xml
        classes/VisualShaderNodeTransformFunc.xml
        classes/VisualShaderNodeTransformOp.xml
        classes/VisualShaderNodeTransformParameter.xml
        classes/VisualShaderNodeTransformVecMult.xml
        classes/VisualShaderNodeUIntConstant.xml
        classes/VisualShaderNodeUIntFunc.xml
        classes/VisualShaderNodeUIntOp.xml
        classes/VisualShaderNodeUIntParameter.xml
        classes/VisualShaderNodeUVFunc.xml
        classes/VisualShaderNodeUVPolarCoord.xml
        classes/VisualShaderNodeVarying.xml
        classes/VisualShaderNodeVaryingGetter.xml
        classes/VisualShaderNodeVaryingSetter.xml
        classes/VisualShaderNodeVec2Constant.xml
        classes/VisualShaderNodeVec2Parameter.xml
        classes/VisualShaderNodeVec3Constant.xml
        classes/VisualShaderNodeVec3Parameter.xml
        classes/VisualShaderNodeVec4Constant.xml
        classes/VisualShaderNodeVec4Parameter.xml
        classes/VisualShaderNodeVectorBase.xml
        classes/VisualShaderNodeVectorCompose.xml
        classes/VisualShaderNodeVectorDecompose.xml
        classes/VisualShaderNodeVectorDistance.xml
        classes/VisualShaderNodeVectorFunc.xml
        classes/VisualShaderNodeVectorLen.xml
        classes/VisualShaderNodeVectorOp.xml
        classes/VisualShaderNodeVectorRefract.xml
        classes/VisualShaderNodeWorldPositionFromDepth.xml
        classes/VoxelGI.xml
        classes/VoxelGIData.xml
        classes/WeakRef.xml
        classes/Window.xml
        classes/WorkerThreadPool.xml
        classes/World2D.xml
        classes/World3D.xml
        classes/WorldBoundaryShape2D.xml
        classes/WorldBoundaryShape3D.xml
        classes/WorldEnvironment.xml
        classes/X509Certificate.xml
        classes/XMLParser.xml
        classes/XRAnchor3D.xml
        classes/XRBodyModifier3D.xml
        classes/XRBodyTracker.xml
        classes/XRCamera3D.xml
        classes/XRController3D.xml
        classes/XRFaceModifier3D.xml
        classes/XRFaceTracker.xml
        classes/XRHandModifier3D.xml
        classes/XRHandTracker.xml
        classes/XRInterface.xml
        classes/XRInterfaceExtension.xml
        classes/XRNode3D.xml
        classes/XROrigin3D.xml
        classes/XRPose.xml
        classes/XRPositionalTracker.xml
        classes/XRServer.xml
        classes/bool.xml
        classes/float.xml
        classes/int.xml
)
# [[[end]]]

set(GODOT_SOURCE_DOCUMENTATION_SOURCE
        ${GODOT_SOURCE_CLASS_MODULE_DOCUMENTATION_SOURCE}
        ${GODOT_SOURCE_CLASS_DOCUMENTATION_SOURCE}
        ${GODOT_SOURCE_PLATFORM_DOCUMENTATION_SOURCE}
)
set(GODOT_EDITOR_COMPRESSED_DOCUMENTATION_OUT ${CMAKE_BINARY_INCLUDE_DIR}/editor/doc_data_compressed.gen.h)
generate_documentation_compressed("${GODOT_SOURCE_DOCUMENTATION_SOURCE}" "${GODOT_EDITOR_COMPRESSED_DOCUMENTATION_OUT}" "${CMAKE_BINARY_INCLUDE_DIR}/editor/temp_cmd.txt")

set_abs(GODOT_DOCUMENTATION_TRANSLATIONS ${CMAKE_CURRENT_SOURCE_DIR}
        translations/es.po
        translations/fr.po
        translations/zh_CN.po
)

set(GODOT_DOCUMENTATION_TRANSLATIONS_OUTPUT ${CMAKE_BINARY_INCLUDE_DIR}/editor/doc_translations.gen.h)
generate_file(make_editor_documentation_translations "${GODOT_DOCUMENTATION_TRANSLATIONS}" "${GODOT_DOCUMENTATION_TRANSLATIONS_OUTPUT}")

add_library(godot-doc INTERFACE)
target_sources(godot-doc PUBLIC
        ${GODOT_EDITOR_COMPRESSED_DOCUMENTATION_OUT}
        ${GODOT_DOCUMENTATION_TRANSLATIONS_OUTPUT}
)
target_sources(godot-doc PUBLIC
        FILE_SET HEADERS
        FILES
        BASE_DIRS ${CMAKE_BINARY_DIR}
        include/editor/doc_data_compressed.gen.h
        include/editor/doc_translations.gen.h
)
